syntax = "proto3";

package userservice;

service UserService {
  rpc GetUserById (UserByIdRequest) returns (User) {}
  rpc GetUserByUuid (UserByUuidRequest) returns (User) {}
  rpc GetUserByEmail (UserByEmailRequest) returns (User) {}
  rpc GetUserByNectar (UserByNectarRequest) returns (User) {}
}

message UserByIdRequest {
  int32 id = 1;
}

message UserByUuidRequest {
  string uuid = 1;
}

message UserByEmailRequest {
  string email = 1;
}

message UserByNectarRequest {
  string nectar_card = 1;
}

message User {
  int32 id = 1;
  string uuid = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string nectar_card = 6;
}
